# solana-hacks

./: LICENSE  README.md
account-data-match/: Cargo.toml  README.md  cicd.sh
account-data-match/account-match/: Cargo.toml
account-data-match/account-match/src/: lib.rs
account-data-match/poc/: Cargo.toml
account-data-match/poc/src/: main.rs
bump-seed-canonicalization/: Cargo.toml  README.MD  cicd.sh
bump-seed-canonicalization/bump-seed-canonicalization/: Cargo.toml
bump-seed-canonicalization/bump-seed-canonicalization/src/: lib.rs
bump-seed-canonicalization/poc/src/: main.rs
cast_truncation/: Cargo.toml  README.md  cicd.sh
cast_truncation/casting-truncation/: Cargo.toml
cast_truncation/casting-truncation/src/: lib.rs
cast_truncation/poc/: Cargo.toml
close-account/: Cargo.toml  README.md  cicd.sh
close-account/close-account/: Cargo.toml
close-account/close-account/src/: lib.rs
close-account/poc/src/: main.rs
cosplay/: Cargo.toml  README.md  cicd.sh
cosplay/cosplay/: Cargo.toml
cosplay/cosplay/src/: lib.rs
cosplay/poc/: Cargo.toml
cosplay/poc/src/: main.rs
duplicated/: Cargo.toml  README.md  cicd.sh
duplicated/duplicated-accounts/: Cargo.toml
duplicated/duplicated-accounts/src/: lib.rs
duplicated/poc/: Cargo.toml
error-not-handled/: Cargo.toml  README.md  cicd.sh
error-not-handled/poc/src/: main.rs
error-not-handled/rent-not-handled/: Cargo.toml
error-not-handled/rent-not-handled/src/: lib.rs
malicious-simulation/: Cargo.toml  README.md  cicd.sh
malicious-simulation/malicious-simulation/: Cargo.toml
malicious-simulation/malicious-simulation/src/: lib.rs
malicious-simulation/poc/src/: main.rs
other-bugs/: Cargo.toml  README.md  cicd.sh
other-bugs/other-bugs/: Cargo.toml
other-bugs/other-bugs/src/: lib.rs
other-bugs/poc/: Cargo.toml
other-bugs/poc/src/: main.rs
reinitialization/: Cargo.toml  README.md  cicd.sh
reinitialization/poc/: Cargo.toml
reinitialization/poc/src/: main.rs
reinitialization/reinit-attack/: Cargo.toml
reinitialization/reinit-attack/src/: lib.rs
