[package]
name = "native"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.15.2"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
borsh = "0.9.1"
borsh-derive = "0.9.1"
owo-colors = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
bincode = "1.3.3"