[package]
name = "malicious-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "malicious_simulation"

[features]
no-entrypoint = []
