[package]
name = "poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
borsh = "0.9.3"

[[bin]]
name = "poc"
path = "src/main.rs"